Доработки по фронту
